--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,8 @@ body {
     width: 90%;
     background-color: rgba(255, 255, 255, 0.8);
 }
+footer {
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    margin-top: 2em;
+    text-align: center;
+}
