--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,14 @@ body {
 .container{
     width: 90%;
     background-color: rgba(255, 255, 255, 0.8);
+    min-height: calc(100vh - 5.5em);
 }
 footer {
     /*background-color: rgba(255, 255, 255, 0.8);*/
-    margin-top: 2em;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
 }
