--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,9 @@ body {
 footer {
     /*background-color: rgba(255, 255, 255, 0.8);*/
     text-align: center;
-    position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
     line-height: 60px;
+    margin-top: 1em;
 }
